# site

./: README.md  annotations.pptx  build_site.bat  pyproject.toml
docs/: .buildinfo  example.html  genindex.html  index.html  me.html  objects.inv  search.html  searchindex.js
docs/.doctrees/: environment.pickle  example.doctree  index.doctree  me.doctree
docs/.doctrees/music/: 1980s.doctree  1988.doctree  1989.doctree  1990.doctree  1990_footnotes.doctree  1990_single_songs.doctree  1990s.doctree  1991.doctree  (+41 more)
docs/_sources/: index.rst.txt  me.rst.txt
docs/music/: 1980s.html  1988.html  1989.html  1990.html  1990_footnotes.html  1990_single_songs.html  1990s.html  1991.html  1992.html  1993.html  1994.html  1995.html  1996.html  1997.html  1998.html  1999.html  2000.html  2000_footnotes.html  2000_single_songs.html  2000s.html  2001.html  2002.html  2003.html  2004.html  2005.html  2006.html  2007.html  2008.html  2009.html  2010.html  2010_footnotes.html  2010_single_songs.html  2010s.html  2011.html  2012.html  2013.html  2014.html  2015.html  2016.html  2017.html  (+9 more)
src/: conf.py  example.rst  index.rst  me.rst
src/music/: 1980s.rst  1990.rst  1990_footnotes.rst  1990s.rst  1991.rst  1992.rst  1993.rst  1994.rst  1995.rst  1996.rst  1997.rst  2000.rst  2000_footnotes.rst  2000s.rst  2001.rst  2002.rst  2003.rst  2004.rst  2006.rst  2008.rst  2009.rst  2010_footnotes.rst  2010_single_songs.rst  2010s.rst  2012.rst  2013.rst  2015.rst  2016.rst  2018.rst  2019.rst  2020s.rst  2024.rst  music_project.rst  year.template
src/templates_not_working/: layout.html
(+36 files in other folders)
